Added /adminshop help command

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,8 @@ name: Adminshop
 version: 0.0.1
 api-version: 1.17
 main: de.alpharout.adminshop.AdminShop
+
+commands:
+  adminshop:
+    description: Gives you the power to create adminshops.
+    aliases: as
