Added Citizens Dependency and check for it

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,9 @@ version: 0.0.1
 api-version: 1.17
 main: de.alpharout.adminshop.AdminShop
 
+softdepend:
+  - Citizens
+
 commands:
   adminshop:
     description: Gives you the power to create adminshops.
