--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -1,4 +1,5 @@
 wrong-subcommand-output: "&cThis subcommand is not available!"
+no-perm-output: "&cYou don't have permissions to execute this!"
 help-command-output:
   - "&f&l| &r&7Overview of &cAdminshop &f&l|"
   - "&7 • /adminshop &chelp &7| Shows you this help."
