Fixed Tab Complete to only be visible for player with permissions

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -10,3 +10,4 @@ commands:
   adminshop:
     description: Gives you the power to create adminshops.
     aliases: as
+    permission: adminshop.command
