--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
         <repository>
             <id>everything</id>
-            <url>http://repo.citizensnpcs.co</url>
+            <url>https://repo.citizensnpcs.co</url>
         </repository>
     </repositories>
 
@@ -35,7 +35,7 @@
 
         <dependency>
             <groupId>net.citizensnpcs</groupId>
-            <artifactId>citizensapi</artifactId>
+            <artifactId>citizens-main</artifactId>
             <version>2.0.29-SNAPSHOT</version>
             <type>jar</type>
             <scope>compile</scope>
