Added trader name to /adminshop create <name>, Trader spawning and trader saving to config

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -3,6 +3,11 @@ no-perm-output: "&cYou don't have permissions to execute this!"
 no-player-output: "&cYou have to be a player to execute this!"
 enter-display-name-output: "&7Please enter the &cdisplay name &7of the trader."
 enter-skin-output: "&7Please enter the &cskin&7 of the trader."
+missing-trader-name-output: "&cYou didn't entered a trader name. Please use /adminshop create <Name>"
+created-trader-output: "&7You &acreated&7 a trader!"
+creating-trader-output: "&7Creating trader..."
+invalid-skin-url-output: "&cThe skin url you entered is invalid!"
 help-command-output:
-  - "&f&l| &r&7Overview of &cAdminshop &f&l|"
+  - "&7&l| &r&7Overview of &cAdminshop &7&l|"
   - "&7 • /adminshop &chelp &7| Shows you this help."
+  - "&7 • /adminshop &ccreate &7<&cname&7> | Creates a trader."
