--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -14,3 +14,5 @@ commands:
 
 libraries:
   - com.googlecode.json-simple:json-simple:1.1.1
+  - com.zaxxer:HikariCP:5.0.1
+  - mysql:mysql-connector-java:8.0.25
