Added structure for GUI-API and added part of BuyComponent

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -8,6 +8,10 @@ created-trader-output: "&7You &acreated&7 a trader!"
 creating-trader-output: "&7Creating trader..."
 invalid-skin-url-output: "&cThe skin url you entered is invalid!"
 list-trader-output: "&7&l| &r&7List of &cTrader &7&l|"
+buy-component-material: "GOLD_NUGGET"
+buy-component-name: "&7» &aBuy Items"
+sell-component-material: "NETHER_WARTS"
+sell-component-name: "&7» &cSell Items"
 help-command-output:
   - "&7&l| &r&7Overview of &cAdminshop &7&l|"
   - "&7 • /adminshop &chelp &7| Shows you this help."
