Added HeadDB and Vault as dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
             <id>everything</id>
             <url>https://repo.citizensnpcs.co</url>
         </repository>
+
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -58,6 +63,19 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.25</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.TheSilentPro</groupId>
+            <artifactId>HeadDB</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.MilkBowl</groupId>
+            <artifactId>VaultAPI</artifactId>
+            <version>1.7</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
