--- a/pom.xml
+++ b/pom.xml
@@ -66,9 +66,10 @@
         </dependency>
 
         <dependency>
-            <groupId>com.github.TheSilentPro</groupId>
-            <artifactId>HeadDB</artifactId>
-            <version>3.3.0</version>
+            <groupId>com.arcaniax</groupId>
+            <artifactId>HeadDatabase-API</artifactId>
+            <version>1.3.1</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
